syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "HouseholdExpenses.proto";
import "HouseholdData.proto";

message UpdateHouseholdRequest {
    int32 HouseholdId = 1;

    DomainServices.SalesArrangementService.HouseholdData Data = 2;
    
    DomainServices.SalesArrangementService.Expenses Expenses = 3;

    google.protobuf.Int32Value CustomerOnSAId1 = 4;
    
    google.protobuf.Int32Value CustomerOnSAId2 = 5;
}
